--- a/repnetwork/build.gradle
+++ b/repnetwork/build.gradle
@@ -26,9 +26,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation project(':msglibrary')
+    implementation 'androidx.room:room-runtime:2.2.3'
     implementation 'androidx.appcompat:appcompat:1.1.0'
+
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.robolectric:robolectric:4.3'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    annotationProcessor 'androidx.room:room-compiler:2.2.3'
 }
